<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MW"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    android:padding="@dimen/dimen_16"
    tools:context="com.example.lucky.alarmsystemfull.Activities.AlarmActivity">

    <TextView
        style="@style/WW"
        android:layout_marginBottom="@dimen/dimen_24"
        android:gravity="center"
        android:text="@string/set_pin_to_alert_off"
        android:textSize="@dimen/font_size_24" />

    <EditText
        android:id="@+id/alarm_edit_text"
        style="@style/MW"
        android:layout_marginBottom="@dimen/dimen_24"
        android:gravity="center"
        android:hint="@string/set_new_pin"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/alarm_off_signal"
        style="@style/MW"
        android:text="@string/allert_off" />
</LinearLayout>
